--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,7 @@
 title: Mete Kabak
 email: kabakmete@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+ Ruby developer, learning some js these days.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://metekabak.me" # the base hostname & protocol for your site
 twitter_username: metekabak
@@ -19,4 +17,4 @@ github_username:  metekabak
 
 # Build settings
 markdown: kramdown
-permalink: blog/:title/
+permalink: blog/:categories/:title/
