--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,9 @@
 title: Mete Kabak
 email: kabakmete@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
- Ruby developer, learning some js these days.
+ Ruby & Php developer developer, fall in love with single page application frameworks.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://metekabak.me" # the base hostname & protocol for your site
+url: "http://metekabak.github.io" # the base hostname & protocol for your site
 twitter_username: metekabak
 github_username:  metekabak
 
